--- a/style.css
+++ b/style.css
@@ -2,12 +2,21 @@
 h1 {
     font-size: 60px;
     text-align: center;
+    color: aliceblue;
+  }
+h2{
+    font-size: 32px;
+    text-align: center;
+    color: antiquewhite;
   }
   
-  p,
-  li {
+p,
+li{
     font-size: 16px;
     line-height: 2;
     letter-spacing: 1px;
   }
   
+html{
+  background-color: black;
+}
