--- a/style.css
+++ b/style.css
@@ -11,7 +11,43 @@ h2{
     color: antiquewhite;
     font-weight: bold; /*Makes the characters inside bold*/
   }
-  
+
+  .button {
+    border: none;
+    color: white;
+    padding: 16px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 10px 5px;
+    transition-duration: 0.4s;
+    cursor: pointer;
+    border-radius: 25px;
+  }
+
+.button1 {
+    background-color: #008CBA;
+    color: black;
+    border: 2px solid lavender;
+  }
+
+.button1:hover{
+  background-color: lavender;
+  color: white;
+}
+
+.button2 {
+  background-color: #008CBA;
+  color: black;
+  border: 2px solid lavender;
+}
+
+.button2:hover{
+background-color: lavender;
+color: white;
+}
+
 p,
 li{
     font-size: 16px;
